--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ img{
     width: 60vw;
     position: relative;
     border: 10px solid rgba(0, 0, 0, 0.621);
+    background-color: rgba(0, 0, 0, 0.621);
 }
 
 
